# plansys2_upf_plugin

./: .gitignore  README.md  dependencies.repos
.github/workflows/: main.yml
plansys2_upf_plan_solver/: CMakeLists.txt  package.xml  plansys2_upf_plan_solver_plugin.xml
plansys2_upf_plan_solver/include/plansys2_upf_plan_solver/: upf_plan_solver.hpp
plansys2_upf_plan_solver/src/plansys2_upf_plan_solver/: upf_plan_solver.cpp
plansys2_upf_plan_solver/test/pddl/: domain.pddl  no_solution_problem.pddl  problem.pddl
plansys2_upf_plan_solver/test/unit/: CMakeLists.txt  upf_test.cpp
upf_solver/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
upf_solver/config/: solver_config.yaml
upf_solver/example/: no_solution_domain.pddl  output_plan.pddl
upf_solver/launch/: plan.launch.py
upf_solver/upf_solver/: upf_solver.py
